force-app/main/default/objects/QuestionnaireSavedAnswer__c/QuestionnaireSavedAnswer__c.object-meta.xml
<CustomObject>
    <label>QuestionnaireSavedAnswer</label>
    <nameField>
        <label>QuestionnaireSavedAnswer Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>