force-app/main/default/objects/QuestionnaireSavedAnswer__c/fields/AnswerValue__c.field-meta.xml
<CustomField>
    <fullName>AnswerValue__c</fullName>
    <label>AnswerValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>