force-app/main/default/objects/QuestionnaireSavedAnswer__c/fields/Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Questionnaire</label>
    <referenceTo>Questionnaire__c</referenceTo>
    <relationshipLabel>QuestionnaireSavedAnswer</relationshipLabel>
    <relationshipName>QuestionnaireSavedAnswer</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>