force-app/main/default/objects/QuestionnaireSavedAnswer__c/fields/QuestionnaireAnswers__c.field-meta.xml
<CustomField>
    <fullName>QuestionnaireAnswers__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>QuestionnaireAnswers</label>
    <referenceTo>QuestionnaireAnswer__c</referenceTo>
    <relationshipLabel>QuestionnaireSavedAnswer</relationshipLabel>
    <relationshipName>QuestionnaireSavedAnswer</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>